--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#" class="ctaa"><i class="ri-login-circle-line"></i>CALCULAR</a>
         </div>
         <div class = "hero-img">
-            <img src="imagenes/cuentas.png" width="640" height="640">
+            <img src="cuentas.png" width="640" height="640">
     </section>
     <div class="icons">
         <a href="#"><i class="ri-instagram-line"></i></a>
